# obs-whisper

./: .gitignore  CMakeLists.txt  README.MD
cli/: CMakeLists.txt  device-capture.cpp  device-capture.h  main.cpp  monitor-capture.cpp  monitor-capture.h  transcription-engine.cpp  transcription-engine.h  window-accumulator.cpp  window-accumulator.h
common/: CMakeLists.txt  whisper-context.cpp  whisper-context.h  whisper-log.c  whisper-log.h  window-slicer.cpp  window-slicer.h
data/locale/: en-US.ini
src/: CMakeLists.txt  caption-writer.cpp  caption-writer.h  plugin-main.c  whisper-context.cpp  whisper-context.h  whisper-filter.cpp
